--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,60 +1,8 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-
-/* --------------------------------------------------- FIN DU RESET --------------------------------------------------- */
-
 *, *:before, *:after {box-sizing:  border-box !important;}
 
 html{
 	/*font-size: 16px;*/
-	font-size: 1.5vmin;
+	font-size: 2vmin;
 }
 
 html, body{
@@ -62,21 +10,22 @@ html, body{
 	height: 100%;
 }
 
-body{
-	font-family: big-caslon-fb, serif;
+/*
+
+font-family: big-caslon-fb, serif;
 	font-weight: 400;
+
+ */
+
+body{
+	font-family: "Colaborate", sans-serif;
 	font-style: normal;
+	line-height: 1.15em;
 }
 
 
-button{
-	background: none;
-	border:0;
-	padding: 0;
-	font-family: big-caslon-fb, serif;
-	font-size: 0.875rem;
-	cursor: pointer;
-}
+
+
 
 
 .drawer{
@@ -87,6 +36,10 @@ button{
 	overflow-x: hidden;
 }
 
+/* ==========================================================================
+   TITLE DRAWER
+   ========================================================================== */
+
 #title{
 	left:0;
 	background: #FFF;
@@ -94,15 +47,15 @@ button{
 	padding: 47px;
 }
 
-#logo{
+/*#logo{
 	width: 130px;
 	height: auto;
-}
+}*/
 
-#btn-newsletter{
+/*#btn-newsletter{
 	position: absolute;
 	bottom: 47px;
-}
+}*/
 
 #content{
 	left:250px;
@@ -120,15 +73,20 @@ button{
 	right: 0;
 	background: #000;
 	color: #FFF;
+}
+
+.maintenance #main{
 	padding:90px 85px;
-	font-size: 3.1875rem;
-	line-height: 1.25em;
 }
 
 #info, #main{
 	transition: width 2s ease, top 2s ease;
 }
 
+
+/* ==========================================================================
+   INFO DRAWER 
+   ========================================================================== */
 #info{
 	width: 35%;
 }
@@ -147,7 +105,9 @@ button{
 	opacity: 0;
 }
 
-
+/* ==========================================================================
+   MAIN DRAWER 
+   ========================================================================== */
 #main{		
 	width: 65%;
 }
@@ -156,6 +116,10 @@ button{
 }
 
 
+
+/* ==========================================================================
+   comment
+   ========================================================================== */
 .drawer.loading .togglebloc.hideonclose{
 	display: block;
 }
@@ -172,17 +136,119 @@ button{
 }
 
 
+/* ==========================================================================
+   TEXTE
+   ========================================================================== */
+
+main.texte h1,
+main.texte h2,
+main.texte h3{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	line-height: 1em;
+}
+
+main.texte h1{
+	font-size: 2rem;
+	margin-bottom: 0.875em;
+}
+
+.txt-normal{
+}
 
 
 
+/* ==========================================================================
+   ITEMS
+   ========================================================================== */
 
-#info h1{
+a{
+	color: inherit;
+	text-decoration: none;
+}
+
+button{
+	background: none;
+	border:0;
+	padding: 0;
+	margin: 0;
+	/*font-family: big-caslon-fb, serif;*/
+	/*font-size: 0.875rem;*/
+	font-size: 1rem;
+	cursor: pointer;
+	font-family: inherit;
+	color: #000;
+}
+
+#main-menu .sub-menu{
+	display: none;
+}
+
+#main-menu .active a{
+	transform: rotate(180deg);
+	transform-origin: center;
+	display: inline-block;
+}
+
+#secondary-menu .sub-menu{
+	display: none;
+}
+
+#secondary-menu .sub-menu.show{
+	display: block;
+}
+
+#secondary-menu li a{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	font-size: 2.15rem;
+}
+
+.mirror{
+	transform: rotate(180deg);
+	transform-origin: center;
+	display: block;
+}
+
+
+
+/* ==========================================================================
+   TITLE Content 
+   ========================================================================== */
+
+/*.languages li{
+	display: inline-block;
+	font-family: "Colaborate";
+	padding: 0;
+	margin: 0;
+}
+
+.languages li+li:before{
+	content: "\\";
+}
+
+.languages li a{
+	text-decoration: none;
+	color: #000;
+	text-transform: capitalize;
+}
+
+.languages li.active a{
+	text-decoration: underline;
+}
+*/
+
+
+
+/* ==========================================================================
+   INFO Content
+   ========================================================================== */
+/*#info h1{
 	font-size: 3.1875rem;
 	margin-bottom: 2.1875rem;
 }
 
 #info>div{
-	/*min-width: 335px;*/
 	margin-bottom: 30px;
 }
 
@@ -197,9 +263,21 @@ button{
 	font-family: "Colaborate";
 	font-weight: 300;
 }
+*/
 
+/* ==========================================================================
+   MAIN Content
+   ========================================================================== */
 
-#main #contact{
+main.texte{
+	padding:2.3rem 1.075rem; /* 47px 22px 
+}
+
+main.texte a{
+	text-decoration: underline;
+}
+
+/*#main #contact{
 	position: absolute;
 	bottom: 53px;
 	right: 60px;
@@ -214,7 +292,7 @@ button{
     animation-name: lang-animation;
     animation-duration: 10s;
     animation-iteration-count: infinite;
-}
+}*/
 
 
 @keyframes lang-animation {
@@ -235,13 +313,10 @@ button{
 
 
 
-.mirror{
-	transform: rotate(180deg);
-	transform-origin: center;
-	display: block;
-}
 
-
+/* ==========================================================================
+   Newsletter
+   ========================================================================== */
 
 #newsletter{
 	position: fixed;
@@ -254,7 +329,6 @@ button{
 	align-items: center;
 	background: #000;
 	transform-origin: center center;
-	/*visibility: hidden;*/
     animation-name: newsletter-close-animation;
     animation-duration: 0.4s;
     animation-fill-mode: forwards;
@@ -298,9 +372,6 @@ button{
 	margin-right: 0.5rem;
 }
 
-
-
-
 #newsletter input{
 	border: #FFF solid 1px;
 	color: #FFF;
@@ -334,13 +405,14 @@ button{
 }
 
 
+/* ==========================================================================
+   MAIN content
+   ========================================================================== */
+
 main{
-	font-family: "Colaborate";
-	font-size: 2.23rem;
-	line-height: 1.35em;
 }
 
-
+/*
 main.grid {
 	-moz-column-count: 3;
 	-webkit-column-count: 3;
@@ -372,31 +444,15 @@ main.grid .tile h2{
 main.grid .tile a h2{
 	text-decoration: none;
 	color: #FFF;
-}
+}*/
 
 
 
-.languages li{
-	display: inline-block;
-	font-family: "Colaborate";
-	padding: 0;
-	margin: 0;
-}
 
-.languages li+li:before{
-	content: "\\";
-}
 
-.languages li a{
-	text-decoration: none;
-	color: #000;
-	text-transform: capitalize;
-}
-
-.languages li.active a{
-	text-decoration: underline;
-}
-
+/* ==========================================================================
+   RESPONSIVE
+   ========================================================================== */
 
 @media screen and (max-width: 1000px ){
 
