--- a/assets/css/templates/maintenance.css
+++ b/assets/css/templates/maintenance.css
@@ -1,1 +1,457 @@
 /* maintenance */
+
+*, *:before, *:after {box-sizing:  border-box !important;}
+
+html{
+	/*font-size: 16px;*/
+	font-size: 1.5vmin;
+}
+
+html, body{
+	margin: 0;
+	height: 100%;
+}
+
+body{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
+
+button{
+	background: none;
+	border:0;
+	padding: 0;
+	font-family: big-caslon-fb, serif;
+	font-size: 0.875rem;
+	cursor: pointer;
+}
+
+
+.drawer{
+	height: 100vh;
+	position: absolute;
+	top: 0;
+	overflow: auto;
+	overflow-x: hidden;
+}
+
+#title{
+	left:0;
+	background: #FFF;
+	width: 250px;
+	padding: 47px;
+}
+
+#logo{
+	width: 130px;
+	height: auto;
+}
+
+#btn-newsletter{
+	position: absolute;
+	bottom: 47px;
+}
+
+#content{
+	left:250px;
+	right: 0;
+}
+
+#info{
+	left: 0;
+	background: #F2E0CD;
+	padding:33px 64px;
+	cursor: pointer;
+}
+
+#main{
+	right: 0;
+	background: #000;
+	color: #FFF;
+	padding:90px 85px;
+	font-size: 3.1875rem;
+	line-height: 1.25em;
+}
+
+#info, #main{
+	transition: width 2s ease, top 2s ease;
+}
+
+#info{
+	width: 35%;
+}
+
+#info *{
+	opacity: 1;
+	transition: opacity 1s ease;
+}
+
+#info.loading{
+	/*width: 72px;*/
+}
+
+#info.loading * {
+	/*display: none;*/
+	opacity: 0;
+}
+
+
+#main{		
+	width: 65%;
+}
+#main.loading{
+	width: calc(100% - 72px);
+}
+
+
+.drawer.loading .togglebloc.hideonclose{
+	display: block;
+}
+.drawer.loading .togglebloc.hideonopen{
+	display: none;
+}
+
+
+.drawer .togglebloc.hideonclose{
+	display: none;
+}
+.drawer .togglebloc.hideonopen{
+	display: block;
+}
+
+
+
+
+
+
+#info h1{
+	font-size: 3.1875rem;
+	margin-bottom: 2.1875rem;
+}
+
+#info>div{
+	/*min-width: 335px;*/
+	margin-bottom: 30px;
+}
+
+#info>div h2{
+	font-size: 1.625rem;
+	font-family: "Colaborate";
+	font-weight: 300;
+}
+
+#info>div p{
+	font-size: 1.25rem;
+	font-family: "Colaborate";
+	font-weight: 300;
+}
+
+
+#main #contact{
+	position: absolute;
+	bottom: 53px;
+	right: 60px;
+}
+
+#main .togglebloc{
+	position: relative;
+} 
+
+.togglebloc .lang{
+	opacity: 0;
+    animation-name: lang-animation;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+
+@keyframes lang-animation {
+    0% {
+    	opacity:0
+    }
+    20%{
+    	opacity: 1;
+    }
+    80%{
+    	opacity: 1;
+    }
+    100% {
+		opacity:0
+    }
+}
+
+
+
+
+.mirror{
+	transform: rotate(180deg);
+	transform-origin: center;
+	display: block;
+}
+
+
+
+#newsletter{
+	position: fixed;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: #000;
+	transform-origin: center center;
+	/*visibility: hidden;*/
+    animation-name: newsletter-close-animation;
+    animation-duration: 0.4s;
+    animation-fill-mode: forwards;
+}
+
+#newsletter.open{
+	visibility: visible;
+	transform: scale(0.7) ;
+    animation-name: newsletter-open-animation;
+}
+
+@keyframes newsletter-open-animation {
+    0% {
+    	opacity:0;
+    	transform: scale(0.7) ;
+    }
+    100% {
+		opacity:1;
+		transform: scale(1);
+    }
+}
+
+@keyframes newsletter-close-animation {
+    0% {
+		opacity:1;
+		transform: scale(1);
+    }
+    100% {
+    	opacity:0;
+    	transform: scale(0.7) ;
+    	visibility: hidden;
+    }
+}
+
+
+.links a{
+	color: #FFF;
+	text-decoration: none;
+	font-size: 1.6rem;
+	display: inline-block;
+	margin-right: 0.5rem;
+}
+
+
+
+
+#newsletter input{
+	border: #FFF solid 1px;
+	color: #FFF;
+	background: #000;
+	font-size: 2rem;
+	padding: 0.5rem;
+	font-family: big-caslon-fb, serif;
+	letter-spacing: 0.15rem;
+}
+
+#newsletter p+p{
+	margin-top: 1rem;
+}
+
+#newsletter a{
+	color: #FFF;
+	text-decoration: none;
+}
+
+#btn-send{
+	color: #FFF;
+	font-size: 2rem;
+	padding: 0.5rem;
+}
+
+#btn-close{
+	position: absolute;
+	top: 43px;
+	right: 43px;
+	color: #FFF;
+}
+
+
+main{
+	font-family: "Colaborate";
+	font-size: 2.23rem;
+	line-height: 1.35em;
+}
+
+
+main.grid {
+	-moz-column-count: 3;
+	-webkit-column-count: 3;
+	-moz-column-gap: 7px;
+	-webkit-column-gap: 7px; 
+}
+
+main.grid .tile {
+	background: #111;
+	display: inline-block;
+	margin:  0.25rem;
+	width:  100%;
+	position: relative;
+	min-height: 150px;
+}
+
+main.grid .tile img{
+	width: 100%
+}
+
+
+main.grid .tile h2{
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	text-align: right;
+}
+
+main.grid .tile a h2{
+	text-decoration: none;
+	color: #FFF;
+}
+
+
+
+.languages li{
+	display: inline-block;
+	font-family: "Colaborate";
+	padding: 0;
+	margin: 0;
+}
+
+.languages li+li:before{
+	content: "\\";
+}
+
+.languages li a{
+	text-decoration: none;
+	color: #000;
+	text-transform: capitalize;
+}
+
+.languages li.active a{
+	text-decoration: underline;
+}
+
+
+@media screen and (max-width: 1000px ){
+
+	html{
+		font-size: 14px;
+	}
+
+}
+@media screen and (max-width: 500px ){
+
+	body{
+		background: #000;
+	}
+
+	.drawer{
+		height: auto;
+		position: static;
+		top: auto;
+		overflow: visible;
+		overflow-x: visible;
+	}
+
+	#title{
+		width: auto;
+		height: auto;
+		padding: 17px;
+	}
+
+	#content{
+		width: auto;
+		height: auto;
+		padding: 0;
+		left: auto;
+		right: auto;
+	}
+
+	#info{
+		left: auto;
+		right: auto;
+		width: auto;
+		padding: 33px 26px;
+		transition: max-height 2s;
+		max-height: 100vh;
+	}
+
+	#info.loading{
+		width: auto;
+		max-height: 60px;
+	}
+
+
+	#main{
+		width: auto;
+		height: auto;
+		left: auto;
+		right: auto;
+		padding:60px 15px;
+		position: relative;
+	}
+
+	#main #cases{
+	}
+
+	#main #intro{
+	}
+
+	#main.loading{
+		width: auto;
+	}
+
+
+
+	.togglebloc .lang{
+		margin-bottom: 100px;
+		font-size: 1.5625rem;
+		line-height: 1.25em;
+		max-width: 100%;
+	}
+
+	#main #contact{
+		position: fixed;
+		right: 17px;
+		bottom: 17px;
+	}
+
+	#btn-newsletter{
+		position: absolute;
+		bottom: 47px;
+		display: none;
+	}
+
+	#main #contact img{
+		width: 20px;
+		height: auto;
+	}
+
+	#main #contact .btn-mail{
+		position: relative;
+		top: -1px;
+	}
+
+}
+
+@media screen and (max-width: 370px ){
+	html{
+		font-size: 12px;
+	}
+}
