--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,24 @@ main.texte h1{
 	font-weight: 400;
 }
 
+main h2,
+main h3{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	font-size: 2.95rem;
+	line-height: 2.95rem;
+	margin: 1rem 2rem;
+}
+
+.text{
+	margin: 2rem;
+	max-width: 35rem;
+}
+
+#map{
+	width: 100%;
+	height: 300px;
+}
 
 
 /* ==========================================================================
@@ -296,6 +314,81 @@ button{
 		-1px  1px 0 #000,
 		1px  1px 0 #000;
  */
+
+.gallery{
+	background: #111;
+}
+
+.slick-arrow{
+	display: none;
+}
+
+ .slick-dots{
+ 	position: absolute;
+ 	bottom: 1rem ;
+ 	width: 100%;
+ 	left: 1rem;
+ 	right: 1rem;
+ 	text-align: center;
+ }
+
+ .slick-dots li{
+/* 	display: inline-block;
+ 	width: 1rem;
+ 	height: 1rem;
+ 	background: #F00;
+ 	border-radius: 0.5rem;*/
+
+	position: relative;
+	display: inline-block;
+	width: 0.5rem;
+	height: 0.5rem;
+	margin: 0 5px;
+	padding: 0;
+	cursor: pointer;
+}
+
+.slick-dots li button{
+ 	font-size: 0;
+	line-height: 0;
+	display: block;
+	width: 0.5rem;
+	height: 0.5rem;
+	padding: 0.5rem;
+	cursor: pointer;
+	color: transparent;
+	border: 0;
+	outline: none;
+	background: transparent;
+ }
+
+.slick-dots li button:before {
+	font-size: 1rem;
+	line-height: 20px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 0.5rem;
+	height: 0.5rem;
+	border-radius: 50%;
+	content: ' ';
+	text-align: center;
+	/*opacity: .25;*/
+	background: transparent;
+	border: solid white 2px;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.slick-dots li.slick-active button:before {
+	/*opacity: .75;*/
+	background: white;
+}
+
+.gallery img{
+	height: 550px;
+	width: auto;
+}
 
 /* ==========================================================================
    TITLE Content 
@@ -500,21 +593,31 @@ main{
 }
 
 main.grid{
-
+	column-count: 2;
+	column-gap: 1rem;
 }
 
-.grid-sizer,
+.loading main.grid{
+	column-count: 3;
+	column-gap: 1rem; 
+}
+
+/*.grid-sizer,
 .tile {
 	width: calc(100% / 2);
-}
+}*/
 
-.loading .grid-sizer,
+/*.loading .grid-sizer,
 .loading .tile {
 	width: calc(100% / 3);
-}
+}*/
 
 .tile{
+	display: inline-block;
 	padding: 5px;
+	margin-bottom: 1rem;
+	position: relative;
+	width: 100%;
 }
 .tile h2{
 	font-family: big-caslon-fb, serif;
@@ -529,6 +632,15 @@ main.grid{
 .tile img{
 	width: 100%;
 	height: auto; 
+}
+
+.tile .gradient{
+	background: linear-gradient(to top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0) 80%);
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 
 /*
