--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ font-family: big-caslon-fb, serif;
 body{
 	font-family: "Colaborate", sans-serif;
 	font-style: normal;
-	line-height: 1.15em;
+	line-height: 1.25em;
 }
 
 
@@ -197,23 +197,37 @@ main.texte h1{
 	font-family: big-caslon-fb, serif;
 	font-weight: 400;
 }
+header.intro h2{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	font-size: 2.95rem;
+	line-height: 2.95rem;
+	margin: 1rem 2rem;
 
-main h2,
-main h3{
+}
+
+main h2{
 	font-family: big-caslon-fb, serif;
 	font-weight: 400;
 	font-size: 2.95rem;
 	line-height: 2.95rem;
 	margin: 1rem 2rem;
 }
+main h3{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	font-size: 1rem;
+	margin: 1rem 2rem;
+}
 
 .text{
 	margin: 2rem;
-	max-width: 35rem;
+	/*max-width: 35rem;*/
 }
 
 #map{
-	width: 100%;
+	/*width: 100%;*/
+	margin: 2rem;
 	height: 300px;
 }
 
@@ -281,9 +295,12 @@ button{
 	display: block;
 }
 
+.social-container{
+	margin: 1rem 2rem;
+}
 
 
-.links a{
+/*.links a{
 	color: #000;
 	text-decoration: none;
 	font-size: 1rem;
@@ -293,9 +310,7 @@ button{
 	text-align: center;
 
 	-webkit-text-stroke: 1px white;
-	/*color: white;*/
 	text-shadow:
-		/*3px 3px 0 #FFF,*/
 		-0.5px -0.5px 0 #FFF,  
 		0.5px -0.5px 0 #FFF,
 		-0.5px  0.5px 0 #FFF,
@@ -304,7 +319,7 @@ button{
 	border: solid 0.8px #FFF;
 	padding: 0.2rem;
 	border-radius: 0.15rem;
-}
+}*/
 /*
 	-webkit-text-stroke: 1px black;
 	color: white;
@@ -334,12 +349,6 @@ button{
  }
 
  .slick-dots li{
-/* 	display: inline-block;
- 	width: 1rem;
- 	height: 1rem;
- 	background: #F00;
- 	border-radius: 0.5rem;*/
-
 	position: relative;
 	display: inline-block;
 	width: 0.5rem;
