--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,8 @@ body{
    INFO DRAWER 
    ========================================================================== */
 #info{
-	width: 35%;
+	/*width: 35%;*/
+	width: 24%;
 }
 
 #info *{
@@ -151,7 +152,8 @@ body{
    MAIN DRAWER 
    ========================================================================== */
 #main{		
-	width: 65%;
+	/*width: 65%;*/
+	width: 76%;
 }
 #main.loading{
 	/*width: calc(100% - 72px);*/
