--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,11 +277,12 @@ main h2{
 	line-height: 2.95rem;
 	margin: 1rem 1vw;
 }
-main h3{
+main h3.practice-title{
 	font-family: big-caslon-fb, serif;
 	font-weight: 400;
-	font-size: 2rem;
-	margin: 2rem 1vw;
+	font-size: 2.95rem;
+	line-height: 2.95rem;
+	margin: 1rem 1vw;
 }
 
 
@@ -311,7 +312,7 @@ main h3{
 	width: 15.32vw;
 	float: right;
 	margin: 0 0 2rem 3rem;
-	/*text-transform: uppercase;*/
+	text-transform: uppercase;
 	font-size: 0.95rem;
 	line-height: 1.2rem;
 }
@@ -331,24 +332,33 @@ main h3{
 .text h1,
 .text h2,
 .text h3{
-	font-family: "Colaborate", sans-serif;
-	font-weight: 100;
+	/*font-family: "Colaborate", sans-serif;
+	font-weight: 100;*/
+
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
 }
 
 
 .text h1{
+	font-size: 2.95rem;
+	line-height: 2.95rem;/*
 	font-size: 2.4rem;
-	line-height: 2.4rem;
+	line-height: 2.4rem;*/
 	margin: 1.2rem 0;
 }
 .text h2{
-	font-size: 1.8rem;
-	line-height: 1.8rem;
+	font-size: 2.4rem;
+	line-height: 2.4rem;
+/*	font-size: 1.8rem;
+	line-height: 1.8rem;*/
 	margin: 1.2rem 0;
 }
 .text h3{
-	font-size: 1.2rem;
-	line-height: 1.2rem;
+	font-size: 1.8rem;
+	line-height: 1.8rem;
+	/*font-size: 1.2rem;
+	line-height: 1.2rem;*/
 	margin: 1.2rem 0;
 }
 
@@ -779,6 +789,10 @@ main.texte a{
 }
 
 
+#newsletter p+p{
+	margin-top: 1rem;
+}
+
 
 #newsletter input{
 	border: #FFF solid 1px;
@@ -788,10 +802,7 @@ main.texte a{
 	padding: 0.5rem;
 	/*font-family: big-caslon-fb, serif;*/
 	letter-spacing: 0.15rem;
-}
-
-#newsletter p+p{
-	margin-top: 1rem;
+	font-weight: 100;
 }
 
 #newsletter a{
@@ -806,6 +817,8 @@ main.texte a{
 	color: #FFF;
 	font-size: 2rem;
 	padding: 0.5rem;
+	text-transform: uppercase;
+	font-weight: 100;
 }
 
 #btn-close{
@@ -937,6 +950,81 @@ main.grid .tile a h2{
 }*/
 
 
+/* ==========================================================================
+   MAINTENANCE
+   ========================================================================== */
+
+.maintenance #info h1{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 3.1875rem;
+	margin-bottom: 2.1875rem;
+}
+
+.maintenance #info>div{
+	/*min-width: 335px;*/
+	margin-bottom: 30px;
+}
+
+.maintenance #info>div h2{
+	font-size: 1.625rem;
+	font-family: "Colaborate";
+	font-weight: 300;
+}
+
+.maintenance #info>div p{
+	font-size: 1.25rem;
+	font-family: "Colaborate";
+	font-weight: 300;
+}
+
+.maintenance #main{
+	font-family: big-caslon-fb, serif;
+	font-weight: 400;
+	font-style: normal;
+	padding:90px 85px;
+	font-size: 3.1875rem;
+	line-height: 1.25em;
+}
+
+.maintenance #main #contact{
+	position: absolute;
+	bottom: 3.26vw;
+	right: 3.26vw;
+}
+
+.maintenance #contact .btn-ideallab, 
+.maintenance #contact .btn-idealistinstitute{
+	display: inline-block;
+	margin-right: 30px;
+	height: 1.5rem;
+	width: auto; 
+}
+
+.maintenance .togglebloc .lang{
+	opacity: 0;
+    animation-name: lang-animation;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+}
+
+
+@keyframes lang-animation {
+    0% {
+    	opacity:0
+    }
+    20%{
+    	opacity: 1;
+    }
+    80%{
+    	opacity: 1;
+    }
+    100% {
+		opacity:0
+    }
+}
+
 
 
 
@@ -962,7 +1050,7 @@ main.grid .tile a h2{
 }
 
 
-@media screen and (max-width: 500px ){
+@media screen and (max-width: 750px ){
 
 	html{
 		font-size: 20px;
@@ -1021,7 +1109,7 @@ main.grid .tile a h2{
 		color: #000;
 		right: 0;
 		top:0;
-		padding: 17px 17px 5px;
+		padding: calc(17px + 0.5rem);
 		z-index: 4000;
 	}
 
@@ -1033,13 +1121,15 @@ main.grid .tile a h2{
 	#main-menu .sub-menu{
 		display: block;
 		margin-bottom: 1rem;
-		margin-left: 3rem;
+		/*margin-left: 3rem;*/
+		margin-left: 2rem;
 	}
 
 	#main-menu .sub-menu li{
-		font-size: 1.7rem;
+		/*font-size: 1.7rem;*/
+		font-size: 1.4rem;
 		line-height: 1.35em;
-		margin-bottom: 0rem;
+		margin: 0.5rem 0;
 	}
 
 
@@ -1052,7 +1142,8 @@ main.grid .tile a h2{
 		bottom: 0;
 		z-index: 3999;
 		overflow: auto;
-		padding: 3.26vw; 
+		/*padding: 3.26vw; */
+		padding: calc(17px + 0.5rem); 
 		display: none;
 	}
 
@@ -1168,6 +1259,14 @@ main.grid .tile a h2{
 		z-index: 3500;
 	}
 
+
+	#logo{
+		width: 5rem;
+		left: auto;
+		top: auto;
+		margin: 0.5rem;
+	}
+
 	main.the-grid,
 	.loading main.the-grid{
 		column-count: 1;
@@ -1226,6 +1325,54 @@ main.grid .tile a h2{
 	#main-content {
 		margin: 0;
 		padding: 18vw 2vw calc(9.3vw + 0.8rem);
+	}
+
+	#newsletter form{
+		max-width: 80vw;
+		margin: auto;
+	}
+
+	#newsletter input{
+		border: #FFF solid 1px;
+		color: #FFF;
+		background: #000;
+		font-size: 1rem;
+		padding: 0.5rem;
+		/*font-family: big-caslon-fb, serif;*/
+		letter-spacing: 0.15rem;
+		font-weight: 100;
+		max-width: 100%;
+	}
+
+	#newsletter a{
+		color: #FFF;
+		text-decoration: none;
+		margin-left: 0.6rem;
+		font-family: big-caslon-fb, serif;
+		font-weight: 400;
+		font-size: 0.8rem;
+	}
+
+	#btn-send{
+		color: #FFF;
+		font-size: 1rem;
+		padding: 0.5rem;
+		text-transform: uppercase;
+		font-weight: 100;
+		max-width: 100%;
+	}
+
+	.maintenance #main{
+		width: auto;
+		height: auto;
+		left: auto;
+		right: auto;
+		padding:18vw 1rem;
+		position: relative;
+	}
+
+	.maintenance #contact{
+		display: none;
 	}
 
 
